<resources>
    <string name="app_name">Fitness Trainer</string>
    <string name="b_rutina">Routine</string>
    <string name="b_crea_rutina">New Routine</string>
    <string name="b_historial">Record</string>
    <string name="b_facil">Easy</string>
    <string name="b_moderado">Moderate</string>
    <string name="b_desafiante">Challenging</string>
    <string name="b_guardar">Save</string>
    <string name="b_organiza">Organize</string>
    <string name="b_organizarejercicios">Organize</string>
    <string name="tv_dia">Day</string>
    <string name="tv_sport">Sport</string>
    <string name="tv_exercici">Exercise</string>
    <string name="b_guardar2">Siguiente</string>
    <string name="b_guardar3">Save</string>
    <string name="b_crear_rutina">New Routine</string>
    <string name="b_crear_rutina_personalizada">New custom routine</string>
    <string name="tv_descripcion">Description</string>
    <string name="tv_nivel">Level</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_crear_rutina">New Routine</string>

    <string name="b_crear_rutina_random">Predeterminated Routine </string>
    <string name="navigation_drawer_open">Open </string>
    <string name="navigation_drawer_close">Close </string>
    <string-array name="musculos">
        <item>All</item>

        <item>Back and Biceps</item>

        <item>Chest and Triceps</item>

        <item>Abdominal</item>

        <item>Legs</item>


    </string-array>
    <string-array name="dificultad">
        <item>All</item>

        <item>Beginner</item>

        <item>Enthusiastic</item>

        <item>Expert</item>


    </string-array>
    <string-array name="dia">

        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>


    </string-array>
    <string name="title_activity_ver_ejercicio">VerEjercicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dias">Days</string>
    <string name="title_activity_crear_rutinas">New Routine</string>
    <string name="tv_descripcion2">Description</string>
    <string name="tv_grupo_muscular">Muscle Group</string>
    <string name="lunes">MO</string>
    <string name="martes">TU</string>
    <string name="miercoles">WE</string>
    <string name="jueves">TH</string>
    <string name="viernes">FR</string>
    <string name="sabado">SA</string>
    <string name="domingo">SU</string>
    <string name="title_activity_pruebas">Tests</string>
    <string name="title_activity_main2">Tests</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tv_repeticiones">Repetitions</string>
    <string name="title_activity_ver_rutinas_predeterminada">VerRutinasPredeterminada</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descripcion">Description</string>
    <string name="iniciar">Play</string>
    <string name="series">Series</string>
    <string name="ronda">Start Round </string>
    <string name="ronda_acabada">Finished Exercise</string>
</resources>
