<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CrearRutina"
    tools:showIn="@layout/app_bar_crear_rutina">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_dia" />

            <Spinner
                android:id="@+id/spDia"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nivel" />

            <Spinner
                android:id="@+id/spNivel"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvGrupoMuscular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="grupo muscular" />

            <Spinner
                android:id="@+id/spMusculo"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvEjercicios"
            android:layout_width="match_parent"
            android:layout_height="363dp">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/bGuargar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Siguiente"
            android:text="@string/b_guardar2" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

