<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fitness.sportgenertaion.fitnesstrainer.Dias$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa"
                android:text="@string/tv_nivel" />

            <Spinner
                android:id="@+id/spNivel"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGrupoMuscular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa"
                android:text="@string/tv_grupo_muscular" />

            <Spinner
                android:id="@+id/spMusculo"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvEjercicios"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bGuargar"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:background="#FF6859"
                android:fontFamily="@font/comfortaa"
                android:text="@string/b_guardar3"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>